// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults renders 'keep typing' correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchResults
    classes={
      Object {
        "inputHint": "",
        "loadingContainer": "",
        "searchResults": "",
      }
    }
    currentSearchInput="EE"
    handleCourseClick={[Function]}
    isFetching={false}
    searchResults={
      Array [
        Object {
          "abbv": "629",
          "name": "Employment Law",
          "school": "LAW",
          "score": 0.75,
          "subject": "BUSCOM",
          "term": "4720",
          "type": "course",
        },
        Object {
          "abbv": "631",
          "name": "Entrepreneurship Law",
          "school": "LAW",
          "score": 0.75,
          "subject": "BUSCOM",
          "term": "4720",
          "type": "course",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <WithStyles(Typography)
          className=""
          variant="body1"
        >
           Keep typing! 
        </WithStyles(Typography)>,
        <WithStyles(List)>
          <WithStyles(ListItem)
            button={true}
            onClick={[Function]}
          >
            <WithStyles(ListItemText)
              primary="BUSCOM 629 Employment Law"
            />
          </WithStyles(ListItem)>
          <WithStyles(ListItem)
            button={true}
            onClick={[Function]}
          >
            <WithStyles(ListItemText)
              primary="BUSCOM 631 Entrepreneurship Law"
            />
          </WithStyles(ListItem)>
        </WithStyles(List)>,
      ],
      "className": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": " Keep typing! ",
          "className": "",
          "variant": "body1",
        },
        "ref": null,
        "rendered": " Keep typing! ",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 629 Employment Law"
              />
            </WithStyles(ListItem)>,
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 631 Entrepreneurship Law"
              />
            </WithStyles(ListItem)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "LAW BUSCOM 629",
            "nodeType": "class",
            "props": Object {
              "button": true,
              "children": <WithStyles(ListItemText)
                primary="BUSCOM 629 Employment Law"
              />,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "primary": "BUSCOM 629 Employment Law",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "LAW BUSCOM 631",
            "nodeType": "class",
            "props": Object {
              "button": true,
              "children": <WithStyles(ListItemText)
                primary="BUSCOM 631 Entrepreneurship Law"
              />,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "primary": "BUSCOM 631 Entrepreneurship Law",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <WithStyles(Typography)
            className=""
            variant="body1"
          >
             Keep typing! 
          </WithStyles(Typography)>,
          <WithStyles(List)>
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 629 Employment Law"
              />
            </WithStyles(ListItem)>
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 631 Entrepreneurship Law"
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>,
        ],
        "className": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": " Keep typing! ",
            "className": "",
            "variant": "body1",
          },
          "ref": null,
          "rendered": " Keep typing! ",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)
                button={true}
                onClick={[Function]}
              >
                <WithStyles(ListItemText)
                  primary="BUSCOM 629 Employment Law"
                />
              </WithStyles(ListItem)>,
              <WithStyles(ListItem)
                button={true}
                onClick={[Function]}
              >
                <WithStyles(ListItemText)
                  primary="BUSCOM 631 Entrepreneurship Law"
                />
              </WithStyles(ListItem)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "LAW BUSCOM 629",
              "nodeType": "class",
              "props": Object {
                "button": true,
                "children": <WithStyles(ListItemText)
                  primary="BUSCOM 629 Employment Law"
                />,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "primary": "BUSCOM 629 Employment Law",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "LAW BUSCOM 631",
              "nodeType": "class",
              "props": Object {
                "button": true,
                "children": <WithStyles(ListItemText)
                  primary="BUSCOM 631 Entrepreneurship Law"
                />,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "primary": "BUSCOM 631 Entrepreneurship Law",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SearchResults renders 'no results' correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchResults
    classes={
      Object {
        "inputHint": "",
        "loadingContainer": "",
        "searchResults": "",
      }
    }
    currentSearchInput="ABCD"
    handleCourseClick={[Function]}
    isFetching={false}
    searchResults={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "No results",
      "className": "",
      "variant": "body1",
    },
    "ref": null,
    "rendered": "No results",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "No results",
        "className": "",
        "variant": "body1",
      },
      "ref": null,
      "rendered": "No results",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SearchResults renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchResults
    classes={
      Object {
        "inputHint": "",
        "loadingContainer": "",
        "searchResults": "",
      }
    }
    currentSearchInput="EECS"
    handleCourseClick={[Function]}
    isFetching={false}
    searchResults={
      Array [
        Object {
          "abbv": "629",
          "name": "Employment Law",
          "school": "LAW",
          "score": 0.75,
          "subject": "BUSCOM",
          "term": "4720",
          "type": "course",
        },
        Object {
          "abbv": "631",
          "name": "Entrepreneurship Law",
          "school": "LAW",
          "score": 0.75,
          "subject": "BUSCOM",
          "term": "4720",
          "type": "course",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        false,
        <WithStyles(List)>
          <WithStyles(ListItem)
            button={true}
            onClick={[Function]}
          >
            <WithStyles(ListItemText)
              primary="BUSCOM 629 Employment Law"
            />
          </WithStyles(ListItem)>
          <WithStyles(ListItem)
            button={true}
            onClick={[Function]}
          >
            <WithStyles(ListItemText)
              primary="BUSCOM 631 Entrepreneurship Law"
            />
          </WithStyles(ListItem)>
        </WithStyles(List)>,
      ],
      "className": "",
    },
    "ref": null,
    "rendered": Array [
      false,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 629 Employment Law"
              />
            </WithStyles(ListItem)>,
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 631 Entrepreneurship Law"
              />
            </WithStyles(ListItem)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "LAW BUSCOM 629",
            "nodeType": "class",
            "props": Object {
              "button": true,
              "children": <WithStyles(ListItemText)
                primary="BUSCOM 629 Employment Law"
              />,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "primary": "BUSCOM 629 Employment Law",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "LAW BUSCOM 631",
            "nodeType": "class",
            "props": Object {
              "button": true,
              "children": <WithStyles(ListItemText)
                primary="BUSCOM 631 Entrepreneurship Law"
              />,
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "primary": "BUSCOM 631 Entrepreneurship Law",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          false,
          <WithStyles(List)>
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 629 Employment Law"
              />
            </WithStyles(ListItem)>
            <WithStyles(ListItem)
              button={true}
              onClick={[Function]}
            >
              <WithStyles(ListItemText)
                primary="BUSCOM 631 Entrepreneurship Law"
              />
            </WithStyles(ListItem)>
          </WithStyles(List)>,
        ],
        "className": "",
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(ListItem)
                button={true}
                onClick={[Function]}
              >
                <WithStyles(ListItemText)
                  primary="BUSCOM 629 Employment Law"
                />
              </WithStyles(ListItem)>,
              <WithStyles(ListItem)
                button={true}
                onClick={[Function]}
              >
                <WithStyles(ListItemText)
                  primary="BUSCOM 631 Entrepreneurship Law"
                />
              </WithStyles(ListItem)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "LAW BUSCOM 629",
              "nodeType": "class",
              "props": Object {
                "button": true,
                "children": <WithStyles(ListItemText)
                  primary="BUSCOM 629 Employment Law"
                />,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "primary": "BUSCOM 629 Employment Law",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": "LAW BUSCOM 631",
              "nodeType": "class",
              "props": Object {
                "button": true,
                "children": <WithStyles(ListItemText)
                  primary="BUSCOM 631 Entrepreneurship Law"
                />,
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "primary": "BUSCOM 631 Entrepreneurship Law",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`SearchResults renders loading correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchResults
    classes={
      Object {
        "inputHint": "",
        "loadingContainer": "",
        "searchResults": "",
      }
    }
    currentSearchInput="EECS"
    handleCourseClick={[Function]}
    isFetching={true}
    searchResults={
      Array [
        Object {
          "abbv": "629",
          "name": "Employment Law",
          "school": "LAW",
          "score": 0.75,
          "subject": "BUSCOM",
          "term": "4720",
          "type": "course",
        },
        Object {
          "abbv": "631",
          "name": "Entrepreneurship Law",
          "school": "LAW",
          "score": 0.75,
          "subject": "BUSCOM",
          "term": "4720",
          "type": "course",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <WithStyles(CircularProgress) />,
      "className": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <WithStyles(CircularProgress) />,
        "className": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
